--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,14 @@
 # Use container-based infrastructure
 sudo: false
 
+# Handle git submodules yourself
+git:
+  submodules: false
+# Use sed to replace the SSH URL with the public URL, then initialize submodules
+before_install:
+  - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
+  - git submodule update --init --recursive
+
 language: scala
 scala:
   - 2.11.8
