--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ git:
 before_install:
   - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
   - git submodule update --init --recursive
+  - git stash
 
 language: scala
 scala:
