Reset instead of stash.

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ git:
 before_install:
   - sed -i 's/git@github.com:/https:\/\/github.com\//' .gitmodules
   - git submodule update --init --recursive
-  - git stash
+  - git reset --hard "HEAD^"
 
 language: scala
 scala:
