--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "bundle-protobuf"]
 	path = bundle-protobuf
-	url = git@github.com:combust-ml/bundle-protobuf.git
+	url = https://github.com/combust-ml/bundle-protobuf.git
