Finish custom types with some tests and reflection fixes.

--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -28,3 +28,5 @@ ml.combust.bundle.registry.mleap.ops = [
 
   "ml.combust.mleap.bundle.ops.PipelineOp"
 ]
+
+ml.combust.mleap.context.customTypes = []
