--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -1,7 +1,7 @@
 ml.combust.bundle.registry.mleap.ops = [
   "ml.combust.mleap.bundle.ops.classification.DecisionTreeClassifierOp",
   "ml.combust.mleap.bundle.ops.classification.GBTClassifierOp",
-  "ml.combust.mleap.bundle.ops.classification.LogisticRegressionop",
+  "ml.combust.mleap.bundle.ops.classification.LogisticRegressionOp",
   "ml.combust.mleap.bundle.ops.classification.OneVsRestOp",
   "ml.combust.mleap.bundle.ops.classification.RandomForestClassifierOp",
   "ml.combust.mleap.bundle.ops.classification.SupportVectorMachineOp",
