Use Bundle.ML CustomType for MLeap runtime now.

--- a/bundle-ml/src/test/resources/reference.conf
+++ b/bundle-ml/src/test/resources/reference.conf
@@ -1,6 +1,6 @@
 ml.combust.bundle.registry.test.ops = [
-  "ml.combust.bundle.test_ops.DecisionTreeRegressionOp",
-  "ml.combust.bundle.test_ops.LinearRegressionOp",
-  "ml.combust.bundle.test_ops.PipelineOp",
-  "ml.combust.bundle.test_ops.StringIndexerOp"
+  "ml.combust.bundle.test.ops.DecisionTreeRegressionOp",
+  "ml.combust.bundle.test.ops.LinearRegressionOp",
+  "ml.combust.bundle.test.ops.PipelineOp",
+  "ml.combust.bundle.test.ops.StringIndexerOp"
 ]
