Add in specs for custom type in Bundle.ML.

--- a/bundle-ml/src/test/resources/reference.conf
+++ b/bundle-ml/src/test/resources/reference.conf
@@ -1,6 +1,8 @@
 ml.combust.bundle.registry.test.ops = [
   "ml.combust.bundle.test.ops.DecisionTreeRegressionOp",
   "ml.combust.bundle.test.ops.LinearRegressionOp",
+  "ml.combust.bundle.test.ops.MyCustomOp",
   "ml.combust.bundle.test.ops.PipelineOp",
   "ml.combust.bundle.test.ops.StringIndexerOp"
 ]
+ml.combust.bundle.customTypes += "ml.combust.bundle.test.MyCustomType"
