--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -18,6 +18,7 @@ ml.combust.bundle.registry.mleap.ops = [
   "ml.combust.mleap.bundle.ops.feature.PcaOp",
   "ml.combust.mleap.bundle.ops.feature.ReverseStringIndexerOp",
   "ml.combust.mleap.bundle.ops.feature.StandardScalerOp",
+  "ml.combust.mleap.bundle.ops.feature.StopWordsRemoverOp",
   "ml.combust.mleap.bundle.ops.feature.StringIndexerOp",
   "ml.combust.mleap.bundle.ops.feature.VectorAssemblerOp",
 
