--- a/mleap-spark/src/main/resources/reference.conf
+++ b/mleap-spark/src/main/resources/reference.conf
@@ -18,6 +18,7 @@ ml.combust.bundle.registry.spark.ops = [
   "org.apache.spark.ml.bundle.ops.feature.PcaOp",
   "org.apache.spark.ml.bundle.ops.feature.ReverseStringIndexerOp",
   "org.apache.spark.ml.bundle.ops.feature.StandardScalerOp",
+  "org.apache.spark.ml.bundle.ops.feature.StopWordsRemoverOp",
   "org.apache.spark.ml.bundle.ops.feature.StringIndexerOp",
   "org.apache.spark.ml.bundle.ops.feature.VectorAssemblerOp",
 
