Update Polynomial expansion to new architecture.

--- a/mleap-spark/src/main/resources/reference.conf
+++ b/mleap-spark/src/main/resources/reference.conf
@@ -16,6 +16,7 @@ ml.combust.bundle.registry.spark.ops = [
   "org.apache.spark.ml.bundle.ops.feature.NormalizerOp",
   "org.apache.spark.ml.bundle.ops.feature.OneHotEncoderOp",
   "org.apache.spark.ml.bundle.ops.feature.PcaOp",
+  "org.apache.spark.ml.bundle.ops.feature.PolynomialExpansionOp",
   "org.apache.spark.ml.bundle.ops.feature.ReverseStringIndexerOp",
   "org.apache.spark.ml.bundle.ops.feature.StandardScalerOp",
   "org.apache.spark.ml.bundle.ops.feature.StopWordsRemoverOp",
