--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -16,6 +16,7 @@ ml.combust.bundle.registry.mleap.ops = [
   "ml.combust.mleap.bundle.ops.feature.NormalizerOp",
   "ml.combust.mleap.bundle.ops.feature.OneHotEncoderOp",
   "ml.combust.mleap.bundle.ops.feature.PcaOp",
+  "ml.combust.mleap.bundle.ops.feature.PolynomialExpansionOp",
   "ml.combust.mleap.bundle.ops.feature.ReverseStringIndexerOp",
   "ml.combust.mleap.bundle.ops.feature.StandardScalerOp",
   "ml.combust.mleap.bundle.ops.feature.StopWordsRemoverOp",
