Add in parity specs for feature transformers.

--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -10,6 +10,7 @@ ml.combust.bundle.registry.mleap.ops = [
 
   "ml.combust.mleap.bundle.ops.feature.BucketizerOp",
   "ml.combust.mleap.bundle.ops.feature.ElementwiseProductOp",
+  "ml.combust.mleap.bundle.ops.feature.HashingTermFrequencyOp",
   "ml.combust.mleap.bundle.ops.feature.MaxAbsScalerOp",
   "ml.combust.mleap.bundle.ops.feature.MinMaxScalerOp",
   "ml.combust.mleap.bundle.ops.feature.NGramOp",
@@ -21,6 +22,7 @@ ml.combust.bundle.registry.mleap.ops = [
   "ml.combust.mleap.bundle.ops.feature.StandardScalerOp",
   "ml.combust.mleap.bundle.ops.feature.StopWordsRemoverOp",
   "ml.combust.mleap.bundle.ops.feature.StringIndexerOp",
+  "ml.combust.mleap.bundle.ops.feature.TokenizerOp",
   "ml.combust.mleap.bundle.ops.feature.VectorAssemblerOp",
 
   "ml.combust.mleap.bundle.ops.regression.DecisionTreeRegressionOp",
