--- a/mleap-spark/src/main/resources/reference.conf
+++ b/mleap-spark/src/main/resources/reference.conf
@@ -10,6 +10,7 @@ ml.combust.bundle.registry.spark.ops = [
 
   "org.apache.spark.ml.bundle.ops.feature.BucketizerOp",
   "org.apache.spark.ml.bundle.ops.feature.ElementwiseProductOp",
+  "org.apache.spark.ml.bundle.ops.feature.HashingTermFrequencyOp",
   "org.apache.spark.ml.bundle.ops.feature.MaxAbsScalerOp",
   "org.apache.spark.ml.bundle.ops.feature.MinMaxScalerOp",
   "org.apache.spark.ml.bundle.ops.feature.NGramOp",
@@ -21,6 +22,7 @@ ml.combust.bundle.registry.spark.ops = [
   "org.apache.spark.ml.bundle.ops.feature.StandardScalerOp",
   "org.apache.spark.ml.bundle.ops.feature.StopWordsRemoverOp",
   "org.apache.spark.ml.bundle.ops.feature.StringIndexerOp",
+  "org.apache.spark.ml.bundle.ops.feature.TokenizerOp",
   "org.apache.spark.ml.bundle.ops.feature.VectorAssemblerOp",
 
   "org.apache.spark.ml.bundle.ops.regression.DecisionTreeRegressionOp",
