Implement Gaussian Mixture Model.

--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -6,6 +6,7 @@ ml.combust.bundle.registry.mleap.ops = [
   "ml.combust.mleap.bundle.ops.classification.RandomForestClassifierOp",
   "ml.combust.mleap.bundle.ops.classification.SupportVectorMachineOp",
 
+  "ml.combust.mleap.bundle.ops.clustering.GaussianMixtureOp",
   "ml.combust.mleap.bundle.ops.clustering.KMeansOp",
 
   "ml.combust.mleap.bundle.ops.feature.BucketizerOp",
