--- a/mleap-spark/src/main/resources/reference.conf
+++ b/mleap-spark/src/main/resources/reference.conf
@@ -6,6 +6,7 @@ ml.combust.bundle.registry.spark.ops = [
   "org.apache.spark.ml.bundle.ops.classification.RandomForestClassifierOp",
   "org.apache.spark.ml.bundle.ops.classification.SupportVectorMachineOp",
 
+  "org.apache.spark.ml.bundle.ops.clustering.GaussianMixtureOp",
   "org.apache.spark.ml.bundle.ops.clustering.KMeansOp",
 
   "org.apache.spark.ml.bundle.ops.feature.BucketizerOp",
