--- a/mleap-spark/src/main/resources/reference.conf
+++ b/mleap-spark/src/main/resources/reference.conf
@@ -9,6 +9,7 @@ ml.combust.bundle.registry.spark.ops = [
   "org.apache.spark.ml.bundle.ops.clustering.GaussianMixtureOp",
   "org.apache.spark.ml.bundle.ops.clustering.KMeansOp",
 
+  "org.apache.spark.ml.bundle.ops.feature.BinarizerOp",
   "org.apache.spark.ml.bundle.ops.feature.BucketizerOp",
   "org.apache.spark.ml.bundle.ops.feature.ElementwiseProductOp",
   "org.apache.spark.ml.bundle.ops.feature.HashingTermFrequencyOp",
