--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -9,6 +9,7 @@ ml.combust.bundle.registry.mleap.ops = [
   "ml.combust.mleap.bundle.ops.clustering.GaussianMixtureOp",
   "ml.combust.mleap.bundle.ops.clustering.KMeansOp",
 
+  "ml.combust.mleap.bundle.ops.feature.BinarizerOp",
   "ml.combust.mleap.bundle.ops.feature.BucketizerOp",
   "ml.combust.mleap.bundle.ops.feature.ElementwiseProductOp",
   "ml.combust.mleap.bundle.ops.feature.HashingTermFrequencyOp",
