--- a/mleap-spark/src/main/resources/reference.conf
+++ b/mleap-spark/src/main/resources/reference.conf
@@ -2,6 +2,7 @@ ml.combust.bundle.registry.spark.ops = [
   "org.apache.spark.ml.bundle.ops.classification.DecisionTreeClassifierOp",
   "org.apache.spark.ml.bundle.ops.classification.GBTClassifierOp",
   "org.apache.spark.ml.bundle.ops.classification.LogisticRegressionOp",
+  "org.apache.spark.ml.bundle.ops.classification.MultiLayerPerceptronClassifierOp",
   "org.apache.spark.ml.bundle.ops.classification.OneVsRestOp",
   "org.apache.spark.ml.bundle.ops.classification.RandomForestClassifierOp",
 
