Include support for BisectingKMeansModel.

--- a/bundle-ml/src/test/resources/reference.conf
+++ b/bundle-ml/src/test/resources/reference.conf
@@ -5,4 +5,4 @@ ml.combust.bundle.registry.test.ops = [
   "ml.combust.bundle.test.ops.PipelineOp",
   "ml.combust.bundle.test.ops.StringIndexerOp"
 ]
-ml.combust.bundle.customTypes += "ml.combust.bundle.test.MyCustomType"
+ml.combust.bundle.custom-types += "ml.combust.bundle.test.MyCustomType"
