--- a/mleap-runtime/src/test/resources/reference.conf
+++ b/mleap-runtime/src/test/resources/reference.conf
@@ -1,1 +1,1 @@
-ml.combust.bundle.customTypes += "ml.combust.mleap.runtime.test.MyCustomType"
+ml.combust.bundle.custom-types += "ml.combust.mleap.runtime.test.MyCustomType"
