--- a/mleap-spark/src/main/resources/reference.conf
+++ b/mleap-spark/src/main/resources/reference.conf
@@ -8,6 +8,7 @@ ml.combust.bundle.registry.spark.ops = [
 
   "org.apache.spark.ml.bundle.ops.clustering.GaussianMixtureOp",
   "org.apache.spark.ml.bundle.ops.clustering.KMeansOp",
+  "org.apache.spark.ml.bundle.ops.clustering.BisectingKMeansOp",
 
   "org.apache.spark.ml.bundle.ops.feature.BinarizerOp",
   "org.apache.spark.ml.bundle.ops.feature.BucketizerOp",
