Add in ChiSqSelector.

--- a/mleap-spark/src/main/resources/reference.conf
+++ b/mleap-spark/src/main/resources/reference.conf
@@ -12,6 +12,7 @@ ml.combust.bundle.registry.spark.ops = [
 
   "org.apache.spark.ml.bundle.ops.feature.BinarizerOp",
   "org.apache.spark.ml.bundle.ops.feature.BucketizerOp",
+  "org.apache.spark.ml.bundle.ops.feature.ChiSqSelectorOp",
   "org.apache.spark.ml.bundle.ops.feature.ElementwiseProductOp",
   "org.apache.spark.ml.bundle.ops.feature.HashingTermFrequencyOp",
   "org.apache.spark.ml.bundle.ops.feature.MaxAbsScalerOp",
