--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -13,6 +13,7 @@ ml.combust.bundle.registry.mleap.ops = [
 
   "ml.combust.mleap.bundle.ops.feature.BinarizerOp",
   "ml.combust.mleap.bundle.ops.feature.BucketizerOp",
+  "ml.combust.mleap.bundle.ops.feature.ChiSqSelectorOp",
   "ml.combust.mleap.bundle.ops.feature.ElementwiseProductOp",
   "ml.combust.mleap.bundle.ops.feature.HashingTermFrequencyOp",
   "ml.combust.mleap.bundle.ops.feature.MaxAbsScalerOp",
