Binary/Unary math operations. Need to add in tests.

--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -16,6 +16,8 @@ ml.combust.bundle.registry.mleap.ops = [
   "ml.combust.mleap.bundle.ops.feature.ChiSqSelectorOp",
   "ml.combust.mleap.bundle.ops.feature.ElementwiseProductOp",
   "ml.combust.mleap.bundle.ops.feature.HashingTermFrequencyOp",
+  "ml.combust.mleap.bundle.ops.feature.MathBinaryOp",
+  "ml.combust.mleap.bundle.ops.feature.MathUnaryOp",
   "ml.combust.mleap.bundle.ops.feature.MaxAbsScalerOp",
   "ml.combust.mleap.bundle.ops.feature.MinMaxScalerOp",
   "ml.combust.mleap.bundle.ops.feature.NGramOp",
