Add in support for IsotonicRegression.

--- a/mleap-spark/src/main/resources/reference.conf
+++ b/mleap-spark/src/main/resources/reference.conf
@@ -31,6 +31,7 @@ ml.combust.bundle.registry.spark.ops = [
 
   "org.apache.spark.ml.bundle.ops.regression.DecisionTreeRegressionOp",
   "org.apache.spark.ml.bundle.ops.regression.GBTRegressionOp",
+  "org.apache.spark.ml.bundle.ops.regression.IsotonicRegressionOp",
   "org.apache.spark.ml.bundle.ops.regression.LinearRegressionOp",
   "org.apache.spark.ml.bundle.ops.regression.RandomForestRegressionOp",
 
