--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -34,6 +34,7 @@ ml.combust.bundle.registry.mleap.ops = [
 
   "ml.combust.mleap.bundle.ops.regression.DecisionTreeRegressionOp",
   "ml.combust.mleap.bundle.ops.regression.GBTRegressionOp",
+  "ml.combust.mleap.bundle.ops.regression.IsotonicRegressionOp",
   "ml.combust.mleap.bundle.ops.regression.LinearRegressionOp",
   "ml.combust.mleap.bundle.ops.regression.RandomForestRegressionOp",
 
