--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -32,6 +32,7 @@ ml.combust.bundle.registry.mleap.ops = [
   "ml.combust.mleap.bundle.ops.feature.TokenizerOp",
   "ml.combust.mleap.bundle.ops.feature.VectorAssemblerOp",
 
+  "ml.combust.mleap.bundle.ops.regression.AFTSurvivalRegressionOp",
   "ml.combust.mleap.bundle.ops.regression.DecisionTreeRegressionOp",
   "ml.combust.mleap.bundle.ops.regression.GBTRegressionOp",
   "ml.combust.mleap.bundle.ops.regression.IsotonicRegressionOp",
