--- a/mleap-spark/src/main/resources/reference.conf
+++ b/mleap-spark/src/main/resources/reference.conf
@@ -29,6 +29,7 @@ ml.combust.bundle.registry.spark.ops = [
   "org.apache.spark.ml.bundle.ops.feature.TokenizerOp",
   "org.apache.spark.ml.bundle.ops.feature.VectorAssemblerOp",
 
+  "org.apache.spark.ml.bundle.ops.regression.AFTSurvivalRegressionOp",
   "org.apache.spark.ml.bundle.ops.regression.DecisionTreeRegressionOp",
   "org.apache.spark.ml.bundle.ops.regression.GBTRegressionOp",
   "org.apache.spark.ml.bundle.ops.regression.IsotonicRegressionOp",
