Add in GeneralizedLinearRegressionModel.

--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -35,6 +35,7 @@ ml.combust.bundle.registry.mleap.ops = [
   "ml.combust.mleap.bundle.ops.regression.AFTSurvivalRegressionOp",
   "ml.combust.mleap.bundle.ops.regression.DecisionTreeRegressionOp",
   "ml.combust.mleap.bundle.ops.regression.GBTRegressionOp",
+  "ml.combust.mleap.bundle.ops.regression.GeneralizedLinearRegressionOp",
   "ml.combust.mleap.bundle.ops.regression.IsotonicRegressionOp",
   "ml.combust.mleap.bundle.ops.regression.LinearRegressionOp",
   "ml.combust.mleap.bundle.ops.regression.RandomForestRegressionOp",
