Add in IDFModel.

--- a/mleap-spark/src/main/resources/reference.conf
+++ b/mleap-spark/src/main/resources/reference.conf
@@ -16,6 +16,7 @@ ml.combust.bundle.registry.spark.ops = [
   "org.apache.spark.ml.bundle.ops.feature.CountVectorizerOp",
   "org.apache.spark.ml.bundle.ops.feature.ElementwiseProductOp",
   "org.apache.spark.ml.bundle.ops.feature.HashingTermFrequencyOp",
+  "org.apache.spark.ml.bundle.ops.feature.IDFOp",
   "org.apache.spark.ml.bundle.ops.feature.MaxAbsScalerOp",
   "org.apache.spark.ml.bundle.ops.feature.MinMaxScalerOp",
   "org.apache.spark.ml.bundle.ops.feature.NGramOp",
