Add in DCT transformer.

--- a/mleap-spark/src/main/resources/reference.conf
+++ b/mleap-spark/src/main/resources/reference.conf
@@ -14,6 +14,7 @@ ml.combust.bundle.registry.spark.ops = [
   "org.apache.spark.ml.bundle.ops.feature.BucketizerOp",
   "org.apache.spark.ml.bundle.ops.feature.ChiSqSelectorOp",
   "org.apache.spark.ml.bundle.ops.feature.CountVectorizerOp",
+  "org.apache.spark.ml.bundle.ops.feature.DCTOp",
   "org.apache.spark.ml.bundle.ops.feature.ElementwiseProductOp",
   "org.apache.spark.ml.bundle.ops.feature.HashingTermFrequencyOp",
   "org.apache.spark.ml.bundle.ops.feature.IDFOp",
