Add MinHashLSHModel and BucketedRandomProjectionLSHModel.

--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -12,6 +12,7 @@ ml.combust.bundle.registry.mleap.ops = [
   "ml.combust.mleap.bundle.ops.clustering.BisectingKMeansOp",
 
   "ml.combust.mleap.bundle.ops.feature.BinarizerOp",
+  "ml.combust.mleap.bundle.ops.feature.BucketedRandomProjectionLSHOp",
   "ml.combust.mleap.bundle.ops.feature.BucketizerOp",
   "ml.combust.mleap.bundle.ops.feature.ChiSqSelectorOp",
   "ml.combust.mleap.bundle.ops.feature.CountVectorizerOp",
@@ -22,6 +23,7 @@ ml.combust.bundle.registry.mleap.ops = [
   "ml.combust.mleap.bundle.ops.feature.MathBinaryOp",
   "ml.combust.mleap.bundle.ops.feature.MathUnaryOp",
   "ml.combust.mleap.bundle.ops.feature.MaxAbsScalerOp",
+  "ml.combust.mleap.bundle.ops.feature.MinHashLSHOp",
   "ml.combust.mleap.bundle.ops.feature.MinMaxScalerOp",
   "ml.combust.mleap.bundle.ops.feature.NGramOp",
   "ml.combust.mleap.bundle.ops.feature.NormalizerOp",
