--- a/mleap-spark/src/main/resources/reference.conf
+++ b/mleap-spark/src/main/resources/reference.conf
@@ -11,6 +11,7 @@ ml.combust.bundle.registry.spark.ops = [
   "org.apache.spark.ml.bundle.ops.clustering.BisectingKMeansOp",
 
   "org.apache.spark.ml.bundle.ops.feature.BinarizerOp",
+  "org.apache.spark.ml.bundle.ops.feature.BucketedRandomProjectionLSHOp",
   "org.apache.spark.ml.bundle.ops.feature.BucketizerOp",
   "org.apache.spark.ml.bundle.ops.feature.ChiSqSelectorOp",
   "org.apache.spark.ml.bundle.ops.feature.CountVectorizerOp",
@@ -19,6 +20,7 @@ ml.combust.bundle.registry.spark.ops = [
   "org.apache.spark.ml.bundle.ops.feature.HashingTermFrequencyOp",
   "org.apache.spark.ml.bundle.ops.feature.IDFOp",
   "org.apache.spark.ml.bundle.ops.feature.MaxAbsScalerOp",
+  "org.apache.spark.ml.bundle.ops.feature.MinHashLSHOp",
   "org.apache.spark.ml.bundle.ops.feature.MinMaxScalerOp",
   "org.apache.spark.ml.bundle.ops.feature.NGramOp",
   "org.apache.spark.ml.bundle.ops.feature.NormalizerOp",
