--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -36,6 +36,7 @@ ml.combust.bundle.registry.mleap.ops = [
   "ml.combust.mleap.bundle.ops.feature.StringIndexerOp",
   "ml.combust.mleap.bundle.ops.feature.TokenizerOp",
   "ml.combust.mleap.bundle.ops.feature.VectorAssemblerOp",
+  "ml.combust.mleap.bundle.ops.feature.VectorSlicerOp",
   "ml.combust.mleap.bundle.ops.feature.WordToVectorOp",
 
   "ml.combust.mleap.bundle.ops.regression.AFTSurvivalRegressionOp",
