Functional imputer estimator/model and parity spec.

--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -21,6 +21,7 @@ ml.combust.bundle.registry.mleap.ops = [
   "ml.combust.mleap.bundle.ops.feature.ElementwiseProductOp",
   "ml.combust.mleap.bundle.ops.feature.HashingTermFrequencyOp",
   "ml.combust.mleap.bundle.ops.feature.IDFOp",
+  "ml.combust.mleap.bundle.ops.feature.ImputerOp",
   "ml.combust.mleap.bundle.ops.feature.MathBinaryOp",
   "ml.combust.mleap.bundle.ops.feature.MathUnaryOp",
   "ml.combust.mleap.bundle.ops.feature.MaxAbsScalerOp",
