--- a/mleap-spark/src/main/resources/reference.conf
+++ b/mleap-spark/src/main/resources/reference.conf
@@ -20,6 +20,7 @@ ml.combust.bundle.registry.spark.ops = [
   "org.apache.spark.ml.bundle.ops.feature.ElementwiseProductOp",
   "org.apache.spark.ml.bundle.ops.feature.HashingTermFrequencyOp",
   "org.apache.spark.ml.bundle.ops.feature.IDFOp",
+  "org.apache.spark.ml.bundle.ops.feature.ImputerOp",
   "org.apache.spark.ml.bundle.ops.feature.MaxAbsScalerOp",
   "org.apache.spark.ml.bundle.ops.feature.MinHashLSHOp",
   "org.apache.spark.ml.bundle.ops.feature.MinMaxScalerOp",
