--- a/mleap-spark-extension/src/main/resources/reference.conf
+++ b/mleap-spark-extension/src/main/resources/reference.conf
@@ -1,6 +1,7 @@
 ml.combust.bundle.registry.spark.ops += "org.apache.spark.ml.bundle.extension.ops.classification.OneVsRestOp"
 ml.combust.bundle.registry.spark.ops += "org.apache.spark.ml.bundle.extension.ops.classification.SupportVectorMachineOp"
 
+ml.combust.bundle.registry.spark.ops += "org.apache.spark.ml.bundle.extension.ops.feature.ImputerOp"
 ml.combust.bundle.registry.spark.ops += "org.apache.spark.ml.bundle.extension.ops.feature.MathBinaryOp"
 ml.combust.bundle.registry.spark.ops += "org.apache.spark.ml.bundle.extension.ops.feature.MathUnaryOp"
 ml.combust.bundle.registry.spark.ops += "org.apache.spark.ml.bundle.extension.ops.feature.OneHotEncoderOp"
