Add in Coalesce and StringMap transformers.

--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -16,6 +16,7 @@ ml.combust.bundle.registry.mleap.ops = [
   "ml.combust.mleap.bundle.ops.feature.BucketedRandomProjectionLSHOp",
   "ml.combust.mleap.bundle.ops.feature.BucketizerOp",
   "ml.combust.mleap.bundle.ops.feature.ChiSqSelectorOp",
+  "ml.combust.mleap.bundle.ops.feature.CoalesceOp",
   "ml.combust.mleap.bundle.ops.feature.CountVectorizerOp",
   "ml.combust.mleap.bundle.ops.feature.DCTOp",
   "ml.combust.mleap.bundle.ops.feature.ElementwiseProductOp",
@@ -36,6 +37,7 @@ ml.combust.bundle.registry.mleap.ops = [
   "ml.combust.mleap.bundle.ops.feature.StandardScalerOp",
   "ml.combust.mleap.bundle.ops.feature.StopWordsRemoverOp",
   "ml.combust.mleap.bundle.ops.feature.StringIndexerOp",
+  "ml.combust.mleap.bundle.ops.feature.StringMapOp",
   "ml.combust.mleap.bundle.ops.feature.TokenizerOp",
   "ml.combust.mleap.bundle.ops.feature.VectorAssemblerOp",
   "ml.combust.mleap.bundle.ops.feature.VectorIndexerOp",
