Add in compatibility for Spark 2.0 and 2.1.

--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -1,4 +1,10 @@
-ml.combust.bundle.registry.mleap.ops = [
+ml.combust.mleap.registry.builtin = {
+  ops = ["ml.combust.mleap.builtin-ops"]
+  custom-types = []
+}
+ml.combust.mleap.registry.default = ${ml.combust.mleap.registry.builtin}
+
+ml.combust.mleap.builtin-ops = [
   "ml.combust.mleap.bundle.ops.classification.DecisionTreeClassifierOp",
   "ml.combust.mleap.bundle.ops.classification.GBTClassifierOp",
   "ml.combust.mleap.bundle.ops.classification.LogisticRegressionOp",
