--- a/mleap-runtime/src/test/resources/reference.conf
+++ b/mleap-runtime/src/test/resources/reference.conf
@@ -1,1 +1,7 @@
-ml.combust.bundle.custom-types += "ml.combust.mleap.runtime.test.MyCustomType"
+ml.combust.mleap.registry.test.builtin = {
+  ops = ["ml.combust.mleap.builtin-ops"]
+  custom-types = ["ml.combust.mleap.test.custom-types"]
+}
+ml.combust.mleap.registry.default = ${ml.combust.mleap.registry.test.builtin}
+
+ml.combust.mleap.test.custom-types = ["ml.combust.mleap.runtime.test.MyCustomType"]
