--- a/mleap-spark/src/main/resources/reference.conf
+++ b/mleap-spark/src/main/resources/reference.conf
@@ -1,7 +1,6 @@
-ml.combust.bundle.registry.spark.ops = [
+ml.combust.mleap.spark.registry.base-ops = [
   "org.apache.spark.ml.bundle.ops.classification.DecisionTreeClassifierOp",
   "org.apache.spark.ml.bundle.ops.classification.GBTClassifierOp",
-  "org.apache.spark.ml.bundle.ops.classification.LogisticRegressionOp",
   "org.apache.spark.ml.bundle.ops.classification.NaiveBayesClassifierOp",
   "org.apache.spark.ml.bundle.ops.classification.MultiLayerPerceptronClassifierOp",
   "org.apache.spark.ml.bundle.ops.classification.OneVsRestOp",
@@ -12,7 +11,6 @@ ml.combust.bundle.registry.spark.ops = [
   "org.apache.spark.ml.bundle.ops.clustering.BisectingKMeansOp",
 
   "org.apache.spark.ml.bundle.ops.feature.BinarizerOp",
-  "org.apache.spark.ml.bundle.ops.feature.BucketedRandomProjectionLSHOp",
   "org.apache.spark.ml.bundle.ops.feature.BucketizerOp",
   "org.apache.spark.ml.bundle.ops.feature.ChiSqSelectorOp",
   "org.apache.spark.ml.bundle.ops.feature.CountVectorizerOp",
@@ -21,7 +19,6 @@ ml.combust.bundle.registry.spark.ops = [
   "org.apache.spark.ml.bundle.ops.feature.HashingTermFrequencyOp",
   "org.apache.spark.ml.bundle.ops.feature.IDFOp",
   "org.apache.spark.ml.bundle.ops.feature.MaxAbsScalerOp",
-  "org.apache.spark.ml.bundle.ops.feature.MinHashLSHOp",
   "org.apache.spark.ml.bundle.ops.feature.MinMaxScalerOp",
   "org.apache.spark.ml.bundle.ops.feature.NGramOp",
   "org.apache.spark.ml.bundle.ops.feature.NormalizerOp",
@@ -48,3 +45,25 @@ ml.combust.bundle.registry.spark.ops = [
 
   "org.apache.spark.ml.bundle.ops.PipelineOp"
 ]
+
+ml.combust.mleap.spark.registry.v20-ops = []
+
+ml.combust.mleap.spark.registry.v21-ops = [
+  "org.apache.spark.ml.bundle.ops.feature.MinHashLSHOp",
+  "org.apache.spark.ml.bundle.ops.feature.BucketedRandomProjectionLSHOp",
+  "org.apache.spark.ml.bundle.ops.classification.LogisticRegressionOpV21"
+]
+
+ml.combust.mleap.spark.registry.v20 = {
+  ops = ["ml.combust.mleap.spark.registry.base-ops",
+    "ml.combust.mleap.spark.registry.v20-ops"]
+  custom-types = []
+}
+
+ml.combust.mleap.spark.registry.v21 = {
+  ops = ["ml.combust.mleap.spark.registry.base-ops",
+    "ml.combust.mleap.spark.registry.v21-ops"]
+  custom-types = []
+}
+
+ml.combust.mleap.spark.registry.default = ${ml.combust.mleap.spark.registry.v21}
