--- a/bundle-ml/src/test/resources/reference.conf
+++ b/bundle-ml/src/test/resources/reference.conf
@@ -1,8 +1,14 @@
-ml.combust.bundle.registry.test.ops = [
+test-registry = {
+  ops = ["test-ops"]
+  custom-types = ["test-types"]
+}
+
+test-ops = [
   "ml.combust.bundle.test.ops.DecisionTreeRegressionOp",
   "ml.combust.bundle.test.ops.LinearRegressionOp",
   "ml.combust.bundle.test.ops.MyCustomOp",
   "ml.combust.bundle.test.ops.PipelineOp",
   "ml.combust.bundle.test.ops.StringIndexerOp"
 ]
-ml.combust.bundle.custom-types += "ml.combust.bundle.test.MyCustomType"
+
+test-types = ["ml.combust.bundle.test.MyCustomType"]
