Support Spark 2.0 and 2.1.

--- a/mleap-spark/src/main/resources/reference.conf
+++ b/mleap-spark/src/main/resources/reference.conf
@@ -46,7 +46,9 @@ ml.combust.mleap.spark.registry.base-ops = [
   "org.apache.spark.ml.bundle.ops.PipelineOp"
 ]
 
-ml.combust.mleap.spark.registry.v20-ops = []
+ml.combust.mleap.spark.registry.v20-ops = [
+  "org.apache.spark.ml.bundle.ops.classification.LogisticRegressionOpV20"
+]
 
 ml.combust.mleap.spark.registry.v21-ops = [
   "org.apache.spark.ml.bundle.ops.feature.MinHashLSHOp",
@@ -66,4 +68,4 @@ ml.combust.mleap.spark.registry.v21 = {
   custom-types = []
 }
 
-ml.combust.mleap.spark.registry.default = ${ml.combust.mleap.spark.registry.v21}
+ml.combust.mleap.spark.registry.default = ${ml.combust.mleap.spark.registry.v20}
