Add in MultinomialLabeler for easy handling of multinomial results.

--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -34,6 +34,7 @@ ml.combust.mleap.builtin-ops = [
   "ml.combust.mleap.bundle.ops.feature.MaxAbsScalerOp",
   "ml.combust.mleap.bundle.ops.feature.MinHashLSHOp",
   "ml.combust.mleap.bundle.ops.feature.MinMaxScalerOp",
+  "ml.combust.mleap.bundle.ops.feature.MultinomialLabelerOp",
   "ml.combust.mleap.bundle.ops.feature.NGramOp",
   "ml.combust.mleap.bundle.ops.feature.NormalizerOp",
   "ml.combust.mleap.bundle.ops.feature.OneHotEncoderOp",
