--- a/mleap-spark-extension/src/main/resources/reference.conf
+++ b/mleap-spark-extension/src/main/resources/reference.conf
@@ -4,6 +4,7 @@ ml.combust.mleap.spark.extension.ops = [
   "org.apache.spark.ml.bundle.extension.ops.feature.ImputerOp",
   "org.apache.spark.ml.bundle.extension.ops.feature.MathBinaryOp",
   "org.apache.spark.ml.bundle.extension.ops.feature.MathUnaryOp",
+  "org.apache.spark.ml.bundle.extension.ops.feature.MultinomialLabelerOp",
   "org.apache.spark.ml.bundle.extension.ops.feature.OneHotEncoderOp"
 ]
 
