--- a/mleap-tensorflow/src/main/resources/reference.conf
+++ b/mleap-tensorflow/src/main/resources/reference.conf
@@ -1,1 +1,1 @@
-ml.combust.bundle.registry.mleap.ops += "ml.combust.mleap.tensorflow.TensorflowTransformerOp"
+ml.combust.mleap.builtin-ops += "ml.combust.mleap.tensorflow.TensorflowTransformerOp"
