Add Spark RegexTokenizer as FeatureTransformer

--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -50,6 +50,7 @@ ml.combust.mleap.builtin-ops = [
   "ml.combust.mleap.bundle.ops.feature.VectorIndexerOp",
   "ml.combust.mleap.bundle.ops.feature.VectorSlicerOp",
   "ml.combust.mleap.bundle.ops.feature.WordToVectorOp",
+  "ml.combust.mleap.bundle.ops.feature.RegexTokenizerOp",
 
   "ml.combust.mleap.bundle.ops.regression.AFTSurvivalRegressionOp",
   "ml.combust.mleap.bundle.ops.regression.DecisionTreeRegressionOp",
