--- a/mleap-spark/src/main/resources/reference.conf
+++ b/mleap-spark/src/main/resources/reference.conf
@@ -58,6 +58,7 @@ ml.combust.mleap.spark.registry.base-ops = [
   "org.apache.spark.ml.bundle.ops.feature.VectorIndexerOp",
   "org.apache.spark.ml.bundle.ops.feature.VectorSlicerOp",
   "org.apache.spark.ml.bundle.ops.feature.WordToVectorOp",
+  "org.apache.spark.ml.bundle.ops.feature.RegexTokenizerOp",
 
   "org.apache.spark.ml.bundle.ops.regression.AFTSurvivalRegressionOp",
   "org.apache.spark.ml.bundle.ops.regression.DecisionTreeRegressionOp",
