Cleaned LDA and WordFilter class files

--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -17,6 +17,7 @@ ml.combust.mleap.builtin-ops = [
   "ml.combust.mleap.bundle.ops.clustering.GaussianMixtureOp",
   "ml.combust.mleap.bundle.ops.clustering.KMeansOp",
   "ml.combust.mleap.bundle.ops.clustering.BisectingKMeansOp",
+  "ml.combust.mleap.bundle.ops.clustering.LDAModelOp",
 
   "ml.combust.mleap.bundle.ops.feature.BinarizerOp",
   "ml.combust.mleap.bundle.ops.feature.BucketedRandomProjectionLSHOp",
@@ -51,6 +52,7 @@ ml.combust.mleap.builtin-ops = [
   "ml.combust.mleap.bundle.ops.feature.VectorSlicerOp",
   "ml.combust.mleap.bundle.ops.feature.WordToVectorOp",
   "ml.combust.mleap.bundle.ops.feature.RegexTokenizerOp",
+  "ml.combust.mleap.bundle.ops.feature.WordLengthFilterOp",
 
   "ml.combust.mleap.bundle.ops.regression.AFTSurvivalRegressionOp",
   "ml.combust.mleap.bundle.ops.regression.DecisionTreeRegressionOp",
