--- a/mleap-spark/src/main/resources/reference.conf
+++ b/mleap-spark/src/main/resources/reference.conf
@@ -33,6 +33,7 @@ ml.combust.mleap.spark.registry.base-ops = [
   "org.apache.spark.ml.bundle.ops.clustering.GaussianMixtureOp",
   "org.apache.spark.ml.bundle.ops.clustering.KMeansOp",
   "org.apache.spark.ml.bundle.ops.clustering.BisectingKMeansOp",
+  "org.apache.spark.ml.bundle.ops.clustering.LDAModelOp",
 
   "org.apache.spark.ml.bundle.ops.feature.BinarizerOp",
   "org.apache.spark.ml.bundle.ops.feature.BucketizerOp",
