--- a/mleap-spark-extension/src/main/resources/reference.conf
+++ b/mleap-spark-extension/src/main/resources/reference.conf
@@ -5,7 +5,8 @@ ml.combust.mleap.spark.extension.ops = [
   "org.apache.spark.ml.bundle.extension.ops.feature.MathBinaryOp",
   "org.apache.spark.ml.bundle.extension.ops.feature.MathUnaryOp",
   "org.apache.spark.ml.bundle.extension.ops.feature.MultinomialLabelerOp",
-  "org.apache.spark.ml.bundle.extension.ops.feature.OneHotEncoderOp"
+  "org.apache.spark.ml.bundle.extension.ops.feature.OneHotEncoderOp",
+  "org.apache.spark.ml.bundle.extension.ops.feature.WordLengthFilterOp"
 ]
 
 ml.combust.mleap.spark.extension.registry.v20 = {
