adding python tests to travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,16 @@ language: scala
 scala:
   - 2.11.8
 
+python:
+  - "2.7"
+
+before_install:
+  - sudo apt-get -y install python2-pip python-dev
+  - sudo pip2 install -U setuptools
+  - sudo pip2 install -U virtualenvwrapper
+  - python2 -V
+  - pip2 -V
+
 script:
   - travis/travis.sh
 
