Add Interaction transformer.

--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -30,6 +30,7 @@ ml.combust.mleap.builtin-ops = [
   "ml.combust.mleap.bundle.ops.feature.HashingTermFrequencyOp",
   "ml.combust.mleap.bundle.ops.feature.IDFOp",
   "ml.combust.mleap.bundle.ops.feature.ImputerOp",
+  "ml.combust.mleap.bundle.ops.feature.InteractionOp",
   "ml.combust.mleap.bundle.ops.feature.MathBinaryOp",
   "ml.combust.mleap.bundle.ops.feature.MathUnaryOp",
   "ml.combust.mleap.bundle.ops.feature.MaxAbsScalerOp",
