--- a/mleap-spark/src/main/resources/reference.conf
+++ b/mleap-spark/src/main/resources/reference.conf
@@ -43,6 +43,7 @@ ml.combust.mleap.spark.registry.base-ops = [
   "org.apache.spark.ml.bundle.ops.feature.ElementwiseProductOp",
   "org.apache.spark.ml.bundle.ops.feature.HashingTermFrequencyOp",
   "org.apache.spark.ml.bundle.ops.feature.IDFOp",
+  "org.apache.spark.ml.bundle.ops.feature.InteractionOp",
   "org.apache.spark.ml.bundle.ops.feature.MaxAbsScalerOp",
   "org.apache.spark.ml.bundle.ops.feature.MinMaxScalerOp",
   "org.apache.spark.ml.bundle.ops.feature.NGramOp",
