--- a/mleap-serving/src/main/resources/application.conf
+++ b/mleap-serving/src/main/resources/application.conf
@@ -2,6 +2,7 @@ ml.combust.mleap.serving {
   http {
     hostname = 0.0.0.0
     port = 65327
+    port = ${?PORT}
     bind-hostname = ${ml.combust.mleap.serving.http.hostname}
     bind-port = ${ml.combust.mleap.serving.http.port}
   }
