Automatically set spark registry version based on version string.

--- a/mleap-spark-extension/src/main/resources/reference.conf
+++ b/mleap-spark-extension/src/main/resources/reference.conf
@@ -9,22 +9,6 @@ ml.combust.mleap.spark.extension.ops = [
   "org.apache.spark.ml.bundle.extension.ops.feature.WordLengthFilterOp"
 ]
 
-ml.combust.mleap.spark.extension.registry.v20 = {
-  ops = [
-    "ml.combust.mleap.spark.registry.base-ops",
-    "ml.combust.mleap.spark.registry.v20-ops",
-    "ml.combust.mleap.spark.extension.ops"
-  ]
-  custom-types = []
-}
-
-ml.combust.mleap.spark.extension.registry.v21 = {
-  ops = [
-    "ml.combust.mleap.spark.registry.base-ops",
-    "ml.combust.mleap.spark.registry.v21-ops",
-    "ml.combust.mleap.spark.extension.ops"
-  ]
-  custom-types = []
-}
-
-ml.combust.mleap.spark.registry.default = ${ml.combust.mleap.spark.extension.registry.v20}
+ml.combust.mleap.spark.registry.v20.ops += "ml.combust.mleap.spark.extension.ops"
+ml.combust.mleap.spark.registry.v21.ops += "ml.combust.mleap.spark.extension.ops"
+ml.combust.mleap.spark.registry.v22.ops += "ml.combust.mleap.spark.extension.ops"
