--- a/mleap-xgboost/src/main/resources/reference.conf
+++ b/mleap-xgboost/src/main/resources/reference.conf
@@ -1,2 +1,6 @@
-ml.combust.mleap.builtin-ops += "ml.combust.mleap.xgboost.bundle.ops.XGBoostClassificationOp"
-ml.combust.mleap.builtin-ops += "ml.combust.mleap.xgboost.bundle.ops.XGBoostRegressionOp"
+ml.combust.mleap.xgboost.ops = [
+  "ml.combust.mleap.xgboost.bundle.ops.XGBoostClassificationOp",
+  "ml.combust.mleap.xgboost.bundle.ops.XGBoostRegressionOp"
+]
+
+ml.combust.mleap.registry.default.ops += "ml.combust.mleap.xgboost.ops"
