--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -1,10 +1,6 @@
-ml.combust.mleap.registry.builtin = {
-  ops = ["ml.combust.mleap.builtin-ops"]
-  custom-types = []
-}
-ml.combust.mleap.registry.default = ${ml.combust.mleap.registry.builtin}
+ml.combust.mleap.registry.default.ops += "ml.combust.mleap.registry.builtin-ops"
 
-ml.combust.mleap.builtin-ops = [
+ml.combust.mleap.registry.builtin-ops = [
   "ml.combust.mleap.bundle.ops.classification.DecisionTreeClassifierOp",
   "ml.combust.mleap.bundle.ops.classification.GBTClassifierOp",
   "ml.combust.mleap.bundle.ops.classification.LogisticRegressionOp",
