Update mleap-spark bundle registry reference file.

--- a/mleap-spark/src/main/resources/reference.conf
+++ b/mleap-spark/src/main/resources/reference.conf
@@ -17,20 +17,14 @@ ml.combust.mleap.spark.registry.v22-ops = [
   "org.apache.spark.ml.bundle.ops.classification.LogisticRegressionOpV21"
 ]
 
-ml.combust.mleap.spark.registry.v20 = {
-  ops = ["ml.combust.mleap.spark.registry.base-ops",
-    "ml.combust.mleap.spark.registry.v20-ops"]
-}
+ml.combust.mleap.spark.registry.v20.ops += "ml.combust.mleap.spark.registry.base-ops"
+ml.combust.mleap.spark.registry.v20.ops += "ml.combust.mleap.spark.registry.v20-ops"
 
-ml.combust.mleap.spark.registry.v21 = {
-  ops = ["ml.combust.mleap.spark.registry.base-ops",
-    "ml.combust.mleap.spark.registry.v21-ops"]
-}
+ml.combust.mleap.spark.registry.v21.ops += "ml.combust.mleap.spark.registry.base-ops"
+ml.combust.mleap.spark.registry.v21.ops += "ml.combust.mleap.spark.registry.v21-ops"
 
-ml.combust.mleap.spark.registry.v22 = {
-  ops = ["ml.combust.mleap.spark.registry.base-ops",
-    "ml.combust.mleap.spark.registry.v22-ops"]
-}
+ml.combust.mleap.spark.registry.v22.ops += "ml.combust.mleap.spark.registry.base-ops"
+ml.combust.mleap.spark.registry.v22.ops += "ml.combust.mleap.spark.registry.v22-ops"
 
 ml.combust.mleap.spark.registry.base-ops = [
   "org.apache.spark.ml.bundle.ops.classification.DecisionTreeClassifierOp",
