--- a/mleap-spark-extension/src/main/resources/reference.conf
+++ b/mleap-spark-extension/src/main/resources/reference.conf
@@ -6,7 +6,8 @@ ml.combust.mleap.spark.extension.ops = [
   "org.apache.spark.ml.bundle.extension.ops.feature.MathUnaryOp",
   "org.apache.spark.ml.bundle.extension.ops.feature.MultinomialLabelerOp",
   "org.apache.spark.ml.bundle.extension.ops.feature.OneHotEncoderOp",
-  "org.apache.spark.ml.bundle.extension.ops.feature.WordLengthFilterOp"
+  "org.apache.spark.ml.bundle.extension.ops.feature.WordLengthFilterOp",
+  "org.apache.spark.ml.bundle.extension.ops.feature.StringMapOp"
 ]
 
 ml.combust.mleap.spark.registry.v20.ops += "ml.combust.mleap.spark.extension.ops"
