fix 'threshold' being serialized as 'double' as expected by mleap and adding BinarizerOp because all transformers in sklearn will serialize a list of input_shapes(even if with just one element) whereas BinarizerOp in mleap runtime/spark only input a single input_shape

--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -16,6 +16,7 @@ ml.combust.mleap.registry.builtin-ops = [
   "ml.combust.mleap.bundle.ops.clustering.LDAModelOp",
 
   "ml.combust.mleap.bundle.ops.feature.BinarizerOp",
+  "ml.combust.mleap.bundle.ops.sklearn.BinarizerOp",
   "ml.combust.mleap.bundle.ops.feature.BucketedRandomProjectionLSHOp",
   "ml.combust.mleap.bundle.ops.feature.BucketizerOp",
   "ml.combust.mleap.bundle.ops.feature.ChiSqSelectorOp",
