--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -39,6 +39,7 @@ ml.combust.mleap.registry.builtin-ops = [
   "ml.combust.mleap.bundle.ops.feature.OneHotEncoderOp",
   "ml.combust.mleap.bundle.ops.feature.PcaOp",
   "ml.combust.mleap.bundle.ops.feature.PolynomialExpansionOp",
+  "ml.combust.mleap.bundle.ops.sklearn.PolynomialFeaturesOp",
   "ml.combust.mleap.bundle.ops.feature.ReverseStringIndexerOp",
   "ml.combust.mleap.bundle.ops.feature.StandardScalerOp",
   "ml.combust.mleap.bundle.ops.feature.StopWordsRemoverOp",
