Fix reference.conf for tensorflow.

--- a/mleap-tensorflow/src/main/resources/reference.conf
+++ b/mleap-tensorflow/src/main/resources/reference.conf
@@ -1,1 +1,5 @@
-ml.combust.mleap.builtin-ops += "ml.combust.mleap.tensorflow.TensorflowTransformerOp"
+ml.combust.mleap.tensorflow.ops = [
+  "ml.combust.mleap.tensorflow.TensorflowTransformerOp"
+]
+
+ml.combust.mleap.registry.default.ops += "ml.combust.mleap.tensorflow.ops"
