add support for ALS predictions in MLeap - part 1
note: some precision issues with parity test to be fixed

--- a/mleap-spark/src/main/resources/reference.conf
+++ b/mleap-spark/src/main/resources/reference.conf
@@ -73,5 +73,7 @@ ml.combust.mleap.spark.registry.base-ops = [
   "org.apache.spark.ml.bundle.ops.regression.LinearRegressionOp",
   "org.apache.spark.ml.bundle.ops.regression.RandomForestRegressionOp",
 
+  "org.apache.spark.ml.bundle.ops.recommendation.ALSOp",
+
   "org.apache.spark.ml.bundle.ops.PipelineOp"
 ]
