--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -61,5 +61,7 @@ ml.combust.mleap.registry.builtin-ops = [
   "ml.combust.mleap.bundle.ops.regression.LinearRegressionOp",
   "ml.combust.mleap.bundle.ops.regression.RandomForestRegressionOp",
 
+  "ml.combust.mleap.bundle.ops.recommendation.ALSOp",
+
   "ml.combust.mleap.bundle.ops.PipelineOp"
 ]
