Upgrade spark dependency to 2.3 and ensure all existing unit tests pass.

--- a/mleap-spark-extension/src/main/resources/reference.conf
+++ b/mleap-spark-extension/src/main/resources/reference.conf
@@ -12,3 +12,4 @@ ml.combust.mleap.spark.extension.ops = [
 ml.combust.mleap.spark.registry.v20.ops += "ml.combust.mleap.spark.extension.ops"
 ml.combust.mleap.spark.registry.v21.ops += "ml.combust.mleap.spark.extension.ops"
 ml.combust.mleap.spark.registry.v22.ops += "ml.combust.mleap.spark.extension.ops"
+ml.combust.mleap.spark.registry.v23.ops += "ml.combust.mleap.spark.extension.ops"
