--- a/mleap-xgboost-spark/src/main/resources/reference.conf
+++ b/mleap-xgboost-spark/src/main/resources/reference.conf
@@ -6,3 +6,4 @@ ml.combust.mleap.spark.xgboost.ops = [
 ml.combust.mleap.spark.registry.v20.ops += "ml.combust.mleap.spark.xgboost.ops"
 ml.combust.mleap.spark.registry.v21.ops += "ml.combust.mleap.spark.xgboost.ops"
 ml.combust.mleap.spark.registry.v22.ops += "ml.combust.mleap.spark.xgboost.ops"
+ml.combust.mleap.spark.registry.v23.ops += "ml.combust.mleap.spark.xgboost.ops"
