Initial work on support for FeatureHasher transformer

--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -24,6 +24,7 @@ ml.combust.mleap.registry.builtin-ops = [
   "ml.combust.mleap.bundle.ops.feature.CountVectorizerOp",
   "ml.combust.mleap.bundle.ops.feature.DCTOp",
   "ml.combust.mleap.bundle.ops.feature.ElementwiseProductOp",
+  "ml.combust.mleap.bundle.ops.feature.FeatureHasherOp",
   "ml.combust.mleap.bundle.ops.feature.HashingTermFrequencyOp",
   "ml.combust.mleap.bundle.ops.feature.IDFOp",
   "ml.combust.mleap.bundle.ops.feature.ImputerOp",
