--- a/mleap-spark/src/main/resources/reference.conf
+++ b/mleap-spark/src/main/resources/reference.conf
@@ -21,7 +21,8 @@ ml.combust.mleap.spark.registry.v23-ops = [
   "org.apache.spark.ml.bundle.ops.feature.MinHashLSHOp",
   "org.apache.spark.ml.bundle.ops.feature.BucketedRandomProjectionLSHOp",
   "org.apache.spark.ml.bundle.ops.classification.GBTClassifierOpV22",
-  "org.apache.spark.ml.bundle.ops.classification.LogisticRegressionOpV21"
+  "org.apache.spark.ml.bundle.ops.classification.LogisticRegressionOpV21",
+  "org.apache.spark.ml.bundle.ops.feature.FeatureHasherOp"
 ]
 
 ml.combust.mleap.spark.registry.v20.ops += "ml.combust.mleap.spark.registry.base-ops"
