--- a/mleap-serving/src/main/resources/application.conf
+++ b/mleap-serving/src/main/resources/application.conf
@@ -1,8 +1,6 @@
 ml.combust.mleap.serving {
   http {
-    hostname = 0.0.0.0
-    port = 65327
-    bind-hostname = ${ml.combust.mleap.serving.http.hostname}
-    bind-port = ${ml.combust.mleap.serving.http.port}
+    bind-hostname = 0.0.0.0
+    bind-port = 65327
   }
 }
