Interpolate environments variables in typesafe config.

--- a/mleap-serving/src/main/resources/application.conf
+++ b/mleap-serving/src/main/resources/application.conf
@@ -1,6 +1,8 @@
 ml.combust.mleap.serving {
   http {
     bind-hostname = 0.0.0.0
+    bind-hostname = ${?MLEAP_SERVER_HOSTNAME}
     bind-port = 65327
+    bind-port = ${?MLEAP_SERVER_PORT}
   }
 }
