Get bootable, running gRPC server.

--- a/mleap-executor/src/main/resources/reference.conf
+++ b/mleap-executor/src/main/resources/reference.conf
@@ -1,4 +1,4 @@
-ml.combust.executor {
+ml.combust.mleap.executor {
   repository {
     class = "ml.combust.mleap.executor.repository.MultiRepositoryProvider$"
 
@@ -12,7 +12,11 @@ ml.combust.executor {
   repository-defaults {
     file {
       move = false
-      threads = 8
+      threads = 4
+    }
+
+    http {
+      threads = 4
     }
   }
 }
