Make sure parallelism parameters get passed through.

--- a/mleap-executor/src/main/resources/reference.conf
+++ b/mleap-executor/src/main/resources/reference.conf
@@ -9,6 +9,11 @@ ml.combust.mleap.executor {
     }]
   }
 
+  client {
+    default-timeout = 10s
+    default-parallelism = 1
+  }
+
   repository-defaults {
     file {
       move = false
