Update usage of timeouts.

--- a/mleap-executor/src/main/resources/reference.conf
+++ b/mleap-executor/src/main/resources/reference.conf
@@ -10,7 +10,7 @@ ml.combust.mleap.executor {
   }
 
   client {
-    default-timeout = 10s
+    default-timeout = 1m
     default-parallelism = 1
   }
 
