Add in RegexIndexerOp.

--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -52,6 +52,7 @@ ml.combust.mleap.registry.builtin-ops = [
   "ml.combust.mleap.bundle.ops.feature.VectorSlicerOp",
   "ml.combust.mleap.bundle.ops.feature.WordToVectorOp",
   "ml.combust.mleap.bundle.ops.feature.RegexTokenizerOp",
+  "ml.combust.mleap.bundle.ops.feature.RegexIndexerOp",
   "ml.combust.mleap.bundle.ops.feature.WordLengthFilterOp",
 
   "ml.combust.mleap.bundle.ops.regression.AFTSurvivalRegressionOp",
