--- a/mleap-serving/src/main/resources/application.conf
+++ b/mleap-serving/src/main/resources/application.conf
@@ -1,8 +1,13 @@
 ml.combust.mleap.serving {
   http {
     bind-hostname = 0.0.0.0
-    bind-hostname = ${?MLEAP_SERVER_HOSTNAME}
+    bind-hostname = ${?MLEAP_HTTP_HOSTNAME}
     bind-port = 65327
-    bind-port = ${?MLEAP_SERVER_PORT}
+    bind-port = ${?MLEAP_HTTP_PORT}
+  }
+
+  grpc {
+    bind-port = 65328
+    bind-port = ${?MLEAP_GRPC_PORT}
   }
 }
