Add in bundle op for categorical drilldown model.

--- a/mleap-runtime/src/main/resources/reference.conf
+++ b/mleap-runtime/src/main/resources/reference.conf
@@ -63,6 +63,8 @@ ml.combust.mleap.registry.builtin-ops = [
   "ml.combust.mleap.bundle.ops.regression.LinearRegressionOp",
   "ml.combust.mleap.bundle.ops.regression.RandomForestRegressionOp",
 
+  "ml.combust.mleap.bundle.ops.ensemble.CategoricalDrilldownOp",
+
   "ml.combust.mleap.bundle.ops.recommendation.ALSOp",
 
   "ml.combust.mleap.bundle.ops.PipelineOp"
