--- a/mleap-executor/src/main/resources/reference.conf
+++ b/mleap-executor/src/main/resources/reference.conf
@@ -14,6 +14,11 @@ ml.combust.mleap.executor {
     default-parallelism = 1
   }
 
+  default {
+    default-memory-timeout = 15 minutes
+    default-disk-timeout = 15 minutes
+  }
+
   repository-defaults {
     file {
       move = false
