Make configuration parameters optional and fallback to config values.

--- a/mleap-executor/src/main/resources/reference.conf
+++ b/mleap-executor/src/main/resources/reference.conf
@@ -17,6 +17,15 @@ ml.combust.mleap.executor {
   default {
     default-memory-timeout = 15 minutes
     default-disk-timeout = 15 minutes
+
+    stream {
+      default-parallelism = 1
+      default-buffer-size = 1024
+    }
+
+    flow {
+      default-parallelism = 1
+    }
   }
 
   repository-defaults {
