Add support for OneHotEncoderModel added in Spark 2.3

--- a/mleap-spark/src/main/resources/reference.conf
+++ b/mleap-spark/src/main/resources/reference.conf
@@ -26,7 +26,8 @@ ml.combust.mleap.spark.registry.v23-ops = [
   "org.apache.spark.ml.bundle.ops.classification.GBTClassifierOpV22",
   "org.apache.spark.ml.bundle.ops.classification.LogisticRegressionOpV21",
   "org.apache.spark.ml.bundle.ops.feature.FeatureHasherOp",
-  "org.apache.spark.ml.bundle.ops.feature.StringIndexerOpV23"
+  "org.apache.spark.ml.bundle.ops.feature.StringIndexerOpV23",
+  "org.apache.spark.ml.bundle.ops.feature.OneHotEncoderOpV23"
 ]
 
 ml.combust.mleap.spark.registry.v20.ops += "ml.combust.mleap.spark.registry.base-ops"
