[Ready to Merge] Support for Spark 2.3's OneHotEncoderModel (#408)
* Add support for OneHotEncoderModel added in Spark 2.3

* Allow 1HE UDF to be invoked with any number of inputs

* Simplify things a bit and remove the extraneous runtime transformer for 1HE.

* Legacy 1HE is no longer registered for Spark 2.3.  Combined 1HE parity tests. No longer have a need for a new DSL Op constant.

* Updated 1HE references in other parity tests

--- a/mleap-spark/src/main/resources/reference.conf
+++ b/mleap-spark/src/main/resources/reference.conf
@@ -1,7 +1,8 @@
 ml.combust.mleap.spark.registry.v20-ops = [
   "org.apache.spark.ml.bundle.ops.classification.GBTClassifierOpV20",
   "org.apache.spark.ml.bundle.ops.classification.LogisticRegressionOpV20",
-  "org.apache.spark.ml.bundle.ops.feature.StringIndexerOpV22"
+  "org.apache.spark.ml.bundle.ops.feature.StringIndexerOpV22",
+  "org.apache.spark.ml.bundle.ops.feature.OneHotEncoderOp"
 ]
 
 ml.combust.mleap.spark.registry.v21-ops = [
@@ -9,7 +10,8 @@ ml.combust.mleap.spark.registry.v21-ops = [
   "org.apache.spark.ml.bundle.ops.feature.BucketedRandomProjectionLSHOp",
   "org.apache.spark.ml.bundle.ops.classification.GBTClassifierOpV20",
   "org.apache.spark.ml.bundle.ops.classification.LogisticRegressionOpV21",
-  "org.apache.spark.ml.bundle.ops.feature.StringIndexerOpV22"
+  "org.apache.spark.ml.bundle.ops.feature.StringIndexerOpV22",
+  "org.apache.spark.ml.bundle.ops.feature.OneHotEncoderOp"
 ]
 
 ml.combust.mleap.spark.registry.v22-ops = [
@@ -17,7 +19,8 @@ ml.combust.mleap.spark.registry.v22-ops = [
   "org.apache.spark.ml.bundle.ops.feature.BucketedRandomProjectionLSHOp",
   "org.apache.spark.ml.bundle.ops.classification.GBTClassifierOpV22",
   "org.apache.spark.ml.bundle.ops.classification.LogisticRegressionOpV21",
-  "org.apache.spark.ml.bundle.ops.feature.StringIndexerOpV22"
+  "org.apache.spark.ml.bundle.ops.feature.StringIndexerOpV22",
+  "org.apache.spark.ml.bundle.ops.feature.OneHotEncoderOp"
 ]
 
 ml.combust.mleap.spark.registry.v23-ops = [
@@ -26,7 +29,8 @@ ml.combust.mleap.spark.registry.v23-ops = [
   "org.apache.spark.ml.bundle.ops.classification.GBTClassifierOpV22",
   "org.apache.spark.ml.bundle.ops.classification.LogisticRegressionOpV21",
   "org.apache.spark.ml.bundle.ops.feature.FeatureHasherOp",
-  "org.apache.spark.ml.bundle.ops.feature.StringIndexerOpV23"
+  "org.apache.spark.ml.bundle.ops.feature.StringIndexerOpV23",
+  "org.apache.spark.ml.bundle.ops.feature.OneHotEncoderOpV23"
 ]
 
 ml.combust.mleap.spark.registry.v20.ops += "ml.combust.mleap.spark.registry.base-ops"
@@ -66,7 +70,6 @@ ml.combust.mleap.spark.registry.base-ops = [
   "org.apache.spark.ml.bundle.ops.feature.MinMaxScalerOp",
   "org.apache.spark.ml.bundle.ops.feature.NGramOp",
   "org.apache.spark.ml.bundle.ops.feature.NormalizerOp",
-  "org.apache.spark.ml.bundle.ops.feature.OneHotEncoderOp",
   "org.apache.spark.ml.bundle.ops.feature.PcaOp",
   "org.apache.spark.ml.bundle.ops.feature.PolynomialExpansionOp",
   "org.apache.spark.ml.bundle.ops.feature.ReverseStringIndexerOp",
