Fix up configuration of HDFS for runtime.

--- a/bundle-hdfs/src/main/resources/reference.conf
+++ b/bundle-hdfs/src/main/resources/reference.conf
@@ -1,1 +1,5 @@
-ml.combust.mleap.registry.default.file-systems += ml.bundle.hdfs.HadoopBundleFileSystem
+ml.combust.mleap.hdfs.default = {
+  class = ml.bundle.hdfs.HadoopBundleFileSystem
+}
+
+ml.combust.mleap.registry.default.file-systems += ${ml.combust.mleap.hdfs.default}
