Add in README and make slightly more configurable.

--- a/bundle-hdfs/src/main/resources/reference.conf
+++ b/bundle-hdfs/src/main/resources/reference.conf
@@ -1,5 +1,29 @@
+// Configure a default HDFS bundle file system
 ml.combust.mleap.hdfs.default = {
   class = ml.bundle.hdfs.HadoopBundleFileSystem
+
+  test {
+    "hello.there" = "mang"
+  }
+
+  // Configure the registered schemes that point to this
+  // Bundle file system. This is useful if you have the
+  // HDFS and S3 file systems configured with Hadoop
+  // And want to use both of them
+  //
+  // schemes = ["hdfs", "s3"]
+
+  // This is used to configure the Hadoop Configuration
+  // This is only needed if the default configuration
+  // won't work for some reason
+  //
+  // Configuration options found here:
+  //   https://hadoop.apache.org/docs/current/hadoop-project-dist/hadoop-common/ClusterSetup.html
+  //
+  // options {
+  //   "fs.defaultFS" = "hdfs://defaultfs:1234/"
+  // }
 }
 
+// Register the default FS with the default bundle registry
 ml.combust.mleap.registry.default.file-systems += ${ml.combust.mleap.hdfs.default}
