revert any changes related to string order type

--- a/mleap-spark/src/main/resources/reference.conf
+++ b/mleap-spark/src/main/resources/reference.conf
@@ -1,7 +1,6 @@
 ml.combust.mleap.spark.registry.v20-ops = [
   "org.apache.spark.ml.bundle.ops.classification.GBTClassifierOpV20",
   "org.apache.spark.ml.bundle.ops.classification.LogisticRegressionOpV20",
-  "org.apache.spark.ml.bundle.ops.feature.StringIndexerOpV22",
   "org.apache.spark.ml.bundle.ops.feature.OneHotEncoderOp"
 ]
 
@@ -10,7 +9,6 @@ ml.combust.mleap.spark.registry.v21-ops = [
   "org.apache.spark.ml.bundle.ops.feature.BucketedRandomProjectionLSHOp",
   "org.apache.spark.ml.bundle.ops.classification.GBTClassifierOpV20",
   "org.apache.spark.ml.bundle.ops.classification.LogisticRegressionOpV21",
-  "org.apache.spark.ml.bundle.ops.feature.StringIndexerOpV22",
   "org.apache.spark.ml.bundle.ops.feature.OneHotEncoderOp"
 ]
 
@@ -19,7 +17,6 @@ ml.combust.mleap.spark.registry.v22-ops = [
   "org.apache.spark.ml.bundle.ops.feature.BucketedRandomProjectionLSHOp",
   "org.apache.spark.ml.bundle.ops.classification.GBTClassifierOpV22",
   "org.apache.spark.ml.bundle.ops.classification.LogisticRegressionOpV21",
-  "org.apache.spark.ml.bundle.ops.feature.StringIndexerOpV22",
   "org.apache.spark.ml.bundle.ops.feature.OneHotEncoderOp"
 ]
 
@@ -29,7 +26,6 @@ ml.combust.mleap.spark.registry.v23-ops = [
   "org.apache.spark.ml.bundle.ops.classification.GBTClassifierOpV22",
   "org.apache.spark.ml.bundle.ops.classification.LogisticRegressionOpV21",
   "org.apache.spark.ml.bundle.ops.feature.FeatureHasherOp",
-  "org.apache.spark.ml.bundle.ops.feature.StringIndexerOpV23",
   "org.apache.spark.ml.bundle.ops.feature.OneHotEncoderOpV23"
 ]
 
@@ -81,6 +77,7 @@ ml.combust.mleap.spark.registry.base-ops = [
   "org.apache.spark.ml.bundle.ops.feature.VectorSlicerOp",
   "org.apache.spark.ml.bundle.ops.feature.WordToVectorOp",
   "org.apache.spark.ml.bundle.ops.feature.RegexTokenizerOp",
+  "org.apache.spark.ml.bundle.ops.feature.StringIndexerOp",
 
   "org.apache.spark.ml.bundle.ops.regression.AFTSurvivalRegressionOp",
   "org.apache.spark.ml.bundle.ops.regression.DecisionTreeRegressionOp",
